updating for transportability