@@ -6,9 +6,13 @@ BRIDGE_NAME=br0
 CLIENT_SIDE_IP=192.1.1.1
 SERVER_SIDE_IP=10.1.1.1
 
+OVS_PORT=6677
+DOCKER_PORT=4243
+
 update() {
     echo "Updating apt-get..."
     sudo apt-get -qq update
+    sudo apt-get install -yqq default-jre default-jdk maven jq
     echo "Update complete"
 }
 
@@ -56,6 +60,19 @@ install_ovs() {
 
 }
 
+setup_maven() {
+    export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/
+    export PATH=$PATH:$JAVA_HOME/bin/
+    mkdir -p ~/.m2
+    cp /usr/share/maven/conf/settings.xml ~/.m2/settings.xml
+    cp -n ~/.m2/settings.xml{,.orig}
+    wget -q -O - https://raw.githubusercontent.com/opendaylight/odlparent/stable/boron/settings.xml > ~/.m2/settings.xml
+    export M2_HOME=/usr/share/maven/
+    export M2=$M2_HOME
+    export MAVEN_OPTS='-Xmx1048m -XX:MaxPermSize=512m -Xms256m'
+    export PATH=$M2:$PATH
+}
+
 find_interface_for_ip() {
   local ip="$1"
 
@@ -66,6 +83,16 @@ find_interface_for_ip() {
     echo $interface
     return 0
   fi
+}
+
+setup_remote_ovsdb_server() {
+    sudo ovs-appctl -t ovsdb-server ovsdb-server/add-remote ptcp:$OVS_PORT
+}
+
+setup_remote_docker(){
+    sudo sed -i 's/fd\:\/\// fd\:\/\/ \-H tcp\:\/\/0\.0\.0\.0\:'"$DOCKER_PORT"'/g' /lib/systemd/system/docker.service
+    sudo systemctl daemon-reload
+    sudo service docker restart
 }
 
 disable_gro() {
@@ -100,6 +127,7 @@ update
 install_docker
 install_ovs
 install_python_packages
+setup_maven
 
 # Setup
 disable_gro
