@@ -11,6 +11,7 @@ SERVER_IP=10.1.1.2
 update() {
     echo "Updating apt-get..."
     sudo apt-get -qq update
+    sudo apt-get install -yqq default-jdk default-jre jq maven
     echo "Update Complete"
 }
 
@@ -26,7 +27,29 @@ install_python_packages() {
     sudo apt-get -yqq install python python-dev python-pip
     sudo pip -qq install --upgrade pip
     sudo pip -qq install ipaddress subprocess32
-    echo "Python Instll Complete"
+    echo "Python Install Complete"
+}
+
+setup_maven() {
+    export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/
+    export PATH=$PATH:$JAVA_HOME/bin/
+    mkdir -p ~/.m2
+    cp /usr/share/maven/conf/settings.xml ~/.m2/settings.xml
+    cp -n ~/.m2/settings.xml{,.orig}
+    wget -q -O - https://raw.githubusercontent.com/opendaylight/odlparent/stable/boron/settings.xml > ~/.m2/settings.xml
+    export M2_HOME=/usr/share/maven/
+    export M2=$M2_HOME
+    export MAVEN_OPTS='-Xmx1048m -XX:MaxPermSize=512m -Xms256m'
+    export PATH=$M2:$PATH
+}
+
+install_ovs() {
+    echo "Installing OVS..."
+    sudo apt-get -yqq install openvswitch-common openvswitch-switch \
+	 openvswitch-dbg
+    sudo systemctl start openvswitch-switch
+    sudo systemctl enable openvswitch-switch
+    echo "OVS Install Complete"
 }
 
 find_interface_for_ip() {
